prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_array_literal.diag.txt
ERROR: expression of type 'array' cannot be assigned to type 'table'
testData/diagnostics/compilation_errors/type_inference/test_array_literal.nut:2:0

// EXPECTED: compile-time error - array literal assigned to table variable
local x: table = [1, 2, 3]
^-------------------------
return x


